--- a/sassestilos.scss
+++ b/sassestilos.scss
@@ -1,65 +1,30 @@
+
+/*AJUSTES PERSONALIZADOS SOBRE BOOTSTRAP*/
+.navbar {
+    flex-wrap: nowrap;
+}
+
+
+
+
 /*VISTA MOBILE*/
 @media only screen and (min-width: 0px) and (max-width: 767px){
     /*ESTRUCTURA PAGINA COMPLETA DE HOME*/
-    #gridhome{
-        display: grid;
-        grid-template-areas: 
-        "header header"
-        "presentacion presentacion"
-        "servicios servicios"
-        "inversion inversion"
-        "footer footer";
-        grid-template-columns: auto, auto;
-        grid-template-rows: auto, 2fr, 2fr, 1fr, auto;
-        grid-column-gap: 0.5rem;
-        grid-row-gap: 0.05rem;
-        height: 100vh;
-    }
-    .header{
-        grid-area: header; 
-        background-image: 
-        linear-gradient(
-          rgba(0, 0, 0, 0.7),
-          rgba(0, 0, 0, 0.3),
-          rgba(0, 0, 0, 0.7)
-        ), url("./assets/bg-headerdark.jpg");
-        background-size: cover;
+    header{
         background-color: black;
-        background-position: bottom;
-        background-repeat: no-repeat;
-         /*--Estructura en header--*/
-        display: grid;
-        grid-template-areas:
-        "nav nav"
-        "logo titulo"
-        "subtitulo subtitulo"
-        "texto texto"
-        "enlace enlace";
-        grid-template-columns: 1fr, 2fr;
-        grid-template-rows: 5%, 50%, 10%, 30%, 5%;
-        align-content: stretch;
-        grid-row-gap: 0.1rem;
-        height: 100vh; 
+
         
-        .logo{ 
-            grid-area: logo;
             
-
-        }
     }
-
-    
-
-
-
-
-
-
+  
 
 }
 
 /*VISTA DESKTOP*/
 @media only screen and (min-width: 768px) {
+    header{
+        background-color: black;
+    }
 
 
 
